# mlx-tts-studio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  run.sh  tts_service.py
.github/workflows/: ci.yml  release.yml
